--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <!-- <link rel="icon" href="%PUBLIC_URL%/favicon.ico" /> -->
+    <link rel="icon" href="https://static.vecteezy.com/system/resources/previews/006/866/625/non_2x/boy-holding-pencil-and-notebook-flat-icon-vector.jpg" />
+    <!-- <link rel="icon" href="https://cdn3.vectorstock.com/i/thumb-large/59/77/registration-register-logo-or-label-diary-note-vector-21805977.jpg" /> -->
+    
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -24,9 +27,10 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Dairy Manager</title>
   </head>
   <body>
+    <!-- <img class="image-back"  src="https://images.unsplash.com/photo-1579280921028-21d4e5005a77?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8NXx8ZGlhcnl8ZW58MHx8MHx8&w=1000&q=80" alt="" srcset=""> -->
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
