--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,16 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Dairy Manager</title>
+    <link
+  rel="stylesheet"
+  href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
+/>
+
+<link
+  rel="stylesheet"
+  href="https://fonts.googleapis.com/icon?family=Material+Icons"
+/>
+
   </head>
   <body>
     <!-- <img class="image-back"  src="https://images.unsplash.com/photo-1579280921028-21d4e5005a77?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8NXx8ZGlhcnl8ZW58MHx8MHx8&w=1000&q=80" alt="" srcset=""> -->
